--- a/가족.html
+++ b/가족.html
@@ -51,7 +51,7 @@
 <nav>
 
 		<ul>
-				<a href="index.html.html">home</a>
+				<a href="index.html">home</a>
 				<a id = "profile1" href="최강민프로필.html">PROFILE</a>
 				<a href="가족.html">가족</a>
 				<a href="추억.html">추억</a>						
